Contract Configurator 1.0.3
- Waypoints now disappear once related contract requirements are met.
- More warnings for unexpected values in configuration (helps authors catch bugs).
- Add expression functions for selecting Celestial Bodies based on player progression.
- TargetDestroyed checks for target being marked as debris (thanks chlue).
- Can now use expressions in ORBIT nodes.
- Verified and recompiled against RemoteTech 1.6.4
- Fix PartModuleUnlockedRequirement that was always returning as met (thanks severedsolo).
- Fix validation for targetBody on some behaviours (thanks rhoark).
- Fix scenario where optional parameters weren't working as expected (thanks Valiant).
- Fix for negative timer values being displayed for count-down parameters (thanks Enceos).
- Fix/workaround for "ghost" issue from exceptions when spawning some vessels (thanks odin_spain).
- Fix for reflection load issue in CompleteContractRequirement when bad assemblies present (thanks Szara).
- Minor bug fixes.

Contract Configurator 1.0.2
- Fix for exception in SpawnPassengers (thanks Jed).

Contract Configurator 1.0.1
- KSP 1.0.2 fixes (CollectScience was broken by the update).
- SpawnKerbal and SpawnPassenger now support setting the Kerbal type and gender.
- Add Gender() method for expressions on Kerbals.
- Added autoAccept attribute to CONTRACT_TYPE (behaves like the stock World-Firsts record contracts).
- Added new ToLower and ToUpper string methods.
- Fixed default value for waypoint proximity trigger for VisitWaypoint.
- Fixed issues with expressions in WaypointGenerator behaviour.
- Fixed issue with waypoint distance calculation when not on the surface.
- Fixed boolean expressions to not try to convert values to a boolean early.

Contract Configurator 1.0.0
- Various fixes related to KSP 1.0.
- Deprecated parameters removed from stock in KSP 1.0 (some may get replacements in a future version of Contract Configurator).
    - AltitudeRecord
    - LaunchVessel
    - BoardAnyVessel