@@ -258,10 +258,9 @@ namespace ContractConfigurator
         /// <returns>True if the value is loaded, logs and error and returns false otherwise.</returns>
         protected virtual bool ValidateTargetBody(ConfigNode configNode)
         {
-            if (targetBody == null)
+            if (targetBody == null && dataNode.IsDeterministic("targetBody") && dataNode.IsInitialized("targetBody"))
             {
-                LoggingUtil.LogError(this, ErrorPrefix(configNode) +
-                    ": targetBody for " + GetType() + " must be specified.");
+                LoggingUtil.LogError(this, ErrorPrefix(configNode) + ": targetBody for " + GetType() + " must be specified.");
                 return false;
             }
             return true;
